--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
 	width: 250px;
 	margin-top: 20px;
 	margin-left: 275px;
-	background-color: #41D9F4;
+	background-color: #3AF6EB;
 }
 
 .amazon {
